[package]
name = "tle-plot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["blocking"] }
sgp4 = "2.3.0"
clap = { version = "4.5.47", features = ["derive"] }
three-d = "0.18.2"
three-d-asset = { version = "0.9.2", features = ["obj", "png", "jpeg", "gltf"] }

