[package]
name = "tle-plot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["blocking"] }
sgp4 = "2.3.0"
clap = { version = "4.5.47", features = ["derive"] }
kiss3d = "0.36.0"
nalgebra   = { version = "0.30", features = ["rand"] }
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
image = "0.25.8"
